# Seqwin

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
cpp/: CMakeLists.txt
cpp/include/: fasta_reader.hpp  graph.hpp  minimizer.hpp  nthash.hpp  nthash_kmer.hpp  nthash_seed.hpp
cpp/include/btllib/: nthash_seed.hpp
cpp/include/seqwin/: fasta_reader.hpp  graph.hpp  helpers.hpp  no_init_array.hpp  thread_pool.hpp
cpp/src/: fasta_reader.cpp  graph.cpp  minimizer.cpp  python_bindings.cpp  status.cpp
cpp/src/bindings/: python_bindings.cpp
cpp/src/seqwin/: fasta_reader.cpp  graph.cpp  helpers.cpp
src/seqwin/: __init__.py  assemblies.py  cli.py  config.py  core.py  graph.py  helpers.py  kmers.py  markers.py  mash.py  minimizer.py  ncbi.py  utils.py
src/seqwin/btllib/: __init__.py
src/seqwin/graph/: __init__.py  utils.py
test/: non-targets.txt  run_test.py
test/expected-output/: config.json  signatures.csv  signatures.fasta
tests/: run_example.py  run_test.py  targets.txt
tests/expected-output/: assemblies.csv
tests/smoke/: conftest.py  test_btllib.py  test_cli.py  test_config.py  test_core.py  test_graph.py  test_outputs.py
tests/smoke/fixtures/: non-targets.txt  targets.txt
tests/smoke/fixtures/expected/: graph.npz  signatures-blast.fasta  signatures.fasta
tests/smoke/fixtures/non-targets/: non-target-2.fasta
tests/smoke/fixtures/targets/: target-1.fasta
