[build-system]
requires = ["scikit-build-core>=0.12", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "seqwin"
dynamic = ["version"]
description = "Seqwin: Ultrafast identification of signature sequences in microbial genomes"
readme = "README.md"
authors = [
    { name = "Michael X. Wang", email = "xw66@rice.edu" }
]
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=2", 
    "numba", 
    "pandas>=2", 
    "networkx", 
    "pydantic", 
    "typer"
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/seqwin/_version.py"
regex = "__version__\\s*=\\s*['\\\"](?P<version>[^'\\\"]+)['\\\"]"
result = "{version}"

[project.scripts]
seqwin = "seqwin.cli:app"

[tool.scikit-build]
minimum-version = "build-system.requires"

# cache build artifacts per wheel tag for faster rebuilds
build-dir = "build/{wheel_tag}"

cmake.source-dir = "cpp"
cmake.build-type = "Release"
cmake.version = ">=3.18"
ninja.version = ">=1.10"
ninja.make-fallback = true

wheel.packages = ["src/seqwin"]

sdist.include = ["cpp/**"]
